--- a/src/Components/Add/Issues.css
+++ b/src/Components/Add/Issues.css
@@ -37,7 +37,7 @@
 .add-issues form blockquote textarea {
   resize: none;
 }
-
+/**/
 .add-issues form button {
   width: fit-content;
   margin: 0 auto;
